[gd_scene load_steps=10 format=4 uid="uid://cwyw7obor6rcn"]

[ext_resource type="Texture2D" uid="uid://dl0kjes6pnh1t" path="res://assets/tiles/tileset.png" id="1_5dtqr"]
[ext_resource type="Script" uid="uid://vy0wlukkiklx" path="res://scenes/hud/opening_cutscene.gd" id="1_f63ji"]
[ext_resource type="PackedScene" uid="uid://2q1aa6ylpd8t" path="res://scenes/chars/bailey/bailey.tscn" id="1_sw4qs"]
[ext_resource type="Texture2D" uid="uid://d22gdtuk54ixw" path="res://assets/chars/momma_bear/momma.png" id="2_37acu"]
[ext_resource type="Texture2D" uid="uid://djnk56m3q8ngo" path="res://assets/backgrounds/lv1/livingroom.png" id="2_f63ji"]
[ext_resource type="Texture2D" uid="uid://24hgtdhvrwrl" path="res://assets/hud/dialog.png" id="4_v6p0i"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v6p0i"]
texture = ExtResource("1_5dtqr")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 0, 64, 1, 64, 64, -64, 64)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 0, 64, 1, 64, 64, -64, 64)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 0, 64, 1, 64, 64, -64, 64)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 0, 64, 1, 64, 64, -64, 64)

[sub_resource type="TileSet" id="TileSet_pguv2"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_v6p0i")

[sub_resource type="LabelSettings" id="LabelSettings_v6p0i"]
font_size = 24
font_color = Color(0, 0, 0, 1)

[node name="OpeningCutscene" type="CanvasLayer"]
script = ExtResource("1_f63ji")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAQAAQADAAAAAAABAAQAAQADAAAAAAACAAQAAQADAAAAAAADAAQAAQADAAAAAAAEAAQAAQADAAAAAAAFAAQAAQADAAAAAAAGAAQAAQADAAAAAAAHAAQAAQADAAAAAAAIAAQAAQADAAAAAAA=")
tile_set = SubResource("TileSet_pguv2")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_f63ji")
centered = false

[node name="Dialog" type="Sprite2D" parent="."]
visible = false
position = Vector2(552, 136)
scale = Vector2(0.534442, 0.181722)
texture = ExtResource("4_v6p0i")

[node name="Momma" type="Sprite2D" parent="."]
position = Vector2(1051, 433)
texture = ExtResource("2_37acu")

[node name="bailey" parent="." instance=ExtResource("1_sw4qs")]
position = Vector2(856, 481)
script = null

[node name="AnimatedSprite2D" parent="bailey" index="0"]
animation = &"idle"
autoplay = "idle"
frame_progress = 0.198917

[node name="Button" type="Button" parent="."]
offset_left = 49.0
offset_top = 535.0
offset_right = 188.0
offset_bottom = 623.0
text = "Skip"

[node name="Label" type="Label" parent="."]
offset_left = 85.0
offset_top = 50.0
offset_right = 914.0
offset_bottom = 188.0
label_settings = SubResource("LabelSettings_v6p0i")
autowrap_mode = 3

[node name="DialogTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="DialogTimer" to="." method="_on_dialog_timer_timeout"]

[editable path="bailey"]
